--- a/ftgo-restaurant-service/src/main/resources/application.properties
+++ b/ftgo-restaurant-service/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=ftgo-order-service
+spring.application.name=ftgo-restaurant-service
 management.endpoint.health.show-details=always
 spring.sleuth.sampler.probability=1.0
 spring.sleuth.web.skipPattern=(^health.*)
@@ -15,7 +15,7 @@ logging.level.net.chrisrichardson.ftgo=DEBUG
 logging.level.io.eventuate.tram=DEBUG
 
 eventuate.database.schema=none
-spring.datasource.url=jdbc:mysql://${DOCKER_HOST_IP:localhost}/ftgo_order_service
+spring.datasource.url=jdbc:mysql://${DOCKER_HOST_IP:localhost}/ftgorestaurantservice
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
